# RAG_Service

./: .env.example  .gitignore  ELECTRON_INTEGRATION.md  README.md  jobs.md  pyproject.toml
.github/workflows/: python-ci.yml
apps/kb_admin_ui/: index.html  package-lock.json  package.json  vite.config.js
apps/kb_admin_ui/src/: App.jsx  styles.css
apps/kb_desktop_daemon/: pyproject.toml
apps/kb_desktop_daemon/src/kb_desktop_daemon/: main.py
apps/kb_desktop_daemon/src/kb_desktop_daemon/adapters/: __init__.py  blob_store.py  chroma_vector.py  parsers.py  providers.py  sqlite_store.py
apps/kb_desktop_daemon/src/kb_desktop_daemon/config/: __init__.py  settings.py
apps/kb_desktop_daemon/src/kb_desktop_daemon/http/: __init__.py  api.py  app.py  auth.py  context.py  schemas.py  worker.py
apps/kb_desktop_daemon/src/kb_desktop_daemon/static/: index.html
apps/kb_desktop_daemon/src/kb_desktop_daemon/static/assets/: index-D1wyE4Y0.css  index-_MWnBp6D.js
apps/kb_desktop_daemon/tests/: test_auth.py  test_collection_documents.py  test_document_views.py  test_provider_factory.py
apps/kb_server/: README.md  pyproject.toml
apps/kb_server/docker/: Dockerfile
apps/kb_server/migrations/: README.md
apps/kb_server/src/kb_server/: __init__.py  main.py
apps/kb_server/src/kb_server/adapters/: __init__.py  pgvector_index.py  postgres_store.py
apps/kb_server/src/kb_server/config/: __init__.py  settings.py
apps/kb_server/src/kb_server/http/: app.py
integrations/openanywork_plugin/: README.md  tsconfig.json
integrations/openanywork_plugin/src/: client.ts  spawnDaemon.ts
scripts/: build_desktop.ps1  build_desktop.sh  dev.ps1  dev.sh
shared/openapi/: kb_desktop_v1.yaml
